<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aplicatia Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buton1">Login cu R+</string>
    <string name="text1">Informatii primite de la serviciul de autentificiare</string>
    <string name="text_nume">Nume</string>
    <string name="text_password">Parola</string>
    <string name="text_button">Login Normal</string>
    <string name="sau">SAU</string>
    <color name="Main_background">#3BA067</color>
	<color name="alb">#FFFFFF</color>
	<string name="date_profil">Profilul tau</string>
	<string name="nume_profil">Numele Tau</string>
	<string name="content_description_poza">Poza de profil</string>

</resources>
